[package]
name = "shovel"
version = "0.1.0"
authors = ["Kot"]
description = "Shovels pixels into some IPV6 space with ICMP"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive", "cargo"] }
image = "0.24.5"
rayon = "1.6.1"
socket2 = { version = "0.4.7", features = ["all"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
