[package]
name = "shovel"
version = "0.1.0"
authors = ["Kot"]
description = "Shovels pixels into some IPV6 space with ICMP"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive", "cargo"] }
futures = { version = "0.3.31", features = ["executor"] }
image = "0.24.5"
indicatif = "0.17.2"
proc-macro2 = "1.0.101"
rayon = "1.6.1"
surge-ping = "0.8.2"
tungstenite = { version = "0.18.0", features = ["native-tls"] }
